Lucene Benchmark Contrib Change Log

The Benchmark contrib package contains code for benchmarking Lucene in a variety of ways.

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

10/07/2011
  LUCENE-3262: Facet benchmarking - Benchmark tasks and sources were added for indexing
  with facets, demonstrated in facets.alg. (Gilad Barkai, Doron Cohen)
    
09/25/2011
  LUCENE-3457: Upgrade commons-compress to 1.2 (and undo LUCENE-2980's workaround).
  (Doron Cohen)
  
05/25/2011
  LUCENE-3137: ExtractReuters supports out-dir param suffixed by a slash. (Doron Cohen)

03/31/2011
  Updated ReadTask to the new method for obtaining a top-level deleted docs
  bitset.  Also checking the bitset for null, when there are no deleted docs.
  (Steve Rowe, Mike McCandless)

  Updated NewAnalyzerTask and NewShingleAnalyzerTask to handle analyzers
  in the new org.apache.lucene.analysis.core package (KeywordAnalyzer,
  SimpleAnalyzer, etc.) (Steve Rowe, Robert Muir)
  
  Updated ReadTokensTask to convert tokens to their indexed forms
  (char[]->byte[]), just as the indexer does.  This allows measurement
  of the conversion process, which is important for analysis components
  that customize it, e.g. (ICU)CollationKeyFilter.  As a result,
  benchmarks that incorporate this task will no longer be directly
  comparable between 3.X and 4.0. (Robert Muir, Steve Rowe)

03/24/2011
  LUCENE-2977: WriteLineDocTask now automatically detects how to write -
  GZip or BZip2 or Plain-text - according to the output file extension.
  Property bzip.compression of WriteLineDocTask was canceled. (Doron Cohen)
  
03/23/2011
  LUCENE-2980: Benchmark's ContentSource no more requires lower case file suffixes 
  for detecting file type (gzip/bzip2/text). As part of this fix worked around an 
  issue with gzip input streams which were remaining open (See COMPRESS-127).
  (Doron Cohen) 

03/22/2011